
JLife v.0.2.0.b1
Add SplashScreen using JSLSplashScreenView class
add JSLNewSeedView, AddSeedAction and CreateNewSeedAction classes
add a check values control in add seed dialog
add shutdown method into JSimLife
add Load, Save and SaveAs action linked with JSLMenu
add wait state in the status bar when save or load simulation
add Icon to the SaveDna dialog;
fix JSLPreferencesView location

JLife v.0.2.0.b0
Re write class to implements the MVC pattern
Renamed all classes and package directories
fix license notice in all files
fix null pointer exception when Simulation exit
using AbstractAction class to perform every game action
add a JTable to display statistical information into the control panel


JLife v.1.13.3
Delete not yet used library easyneurons;
translate: JFrameAbout
translate: JLifeShowZlife
translate: Statistic

JLife v.1.13.2
add Internationalization Routines (it_IT and US-EN)
add Language Selection routine into JFramePreferences.java
add Language Selection Routine into Main.java
add set and get Configuration methods to JLife.java
add isPresent() method in Configuration.java
add LocaleParseString(String) method in Configuration.java
translate: JLifeMainWindow
translate: JFramePreferences
translate: JFrameNewCell
translate: JLifeToolbar
fix Icon into Save and Open dialog;
fix Icon into addSeed dialog;
fix save and load simulation bug: now Configuration implements serializable
fix XMLEditor error: freeze when export the project in a Jar file.

JLife v.1.13.1
add JEX as a Java easy XML editor in tools menu
Change charts background and foreground color;
fix Step Action in Menu
add status field onto statusBar
add coordinates check value in JFrameNewCell
fix age effect: Zlifes spend too much lifeCycle
fix Jenetic.DNa.CombineGene() method: now the combinated values are under or bottom average value!
fix life control in JsimLife; now ZLife die if energy == 0!
fix riproductionCollision: now new Zlifes born hungry!